# ConnectFour

./: CMakeLists.txt  game_Field.cpp  game_Field.h
src/game/: Field.java  Main.java  MyPanel.java
src/test/: BoardInitializationTest.java  CaptureOpponentPieces.java  DLLLoader.java  GameMechanicsTest.java  MakeMoveTest.java
